--- a/instructor-dashboard.html
+++ b/instructor-dashboard.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instructor Dashboard | SkillPro Institute</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    </head>
+</head>
 <body>
     <div id="loader-wrapper"><div class="spinner"></div></div>
 
@@ -56,9 +60,7 @@
     </main>
     
     <footer class="main-footer">
-        <div class="container">
-            <p>&copy; 2025 SkillPro Institute. All Rights Reserved.</p>
-        </div>
+        <div class="container"><p>&copy; 2025 SkillPro Institute.</p></div>
     </footer>
     
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
@@ -66,6 +68,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <script src="assets/js/firebase-config.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="assets/js/main.js"></script>
     <script src="assets/js/instructor.js"></script>
 </body>
 </html>
